--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -7,7 +7,10 @@
     background-color: #f8f9fa; /* Background color for jumbotron */
     padding: 100px 0; /* Padding for jumbotron */
   }
-  
+  .jumbotron img{
+    width: auto;
+    height: fit-content;
+  }
   .jumbotron h1 {
     font-size: 3rem; /* Font size for heading */
     margin-bottom: 20px; /* Margin bottom for heading */
