--- a/src/App.css
+++ b/src/App.css
@@ -17,52 +17,24 @@ body {
 }
 
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 10px 0;
-}
-
-nav ul {
-  list-style-type: none;
-}
-
-nav ul li {
-  display: inline;
-  margin-right: 10px;
-}
-
-nav ul li a {
-  color: #fff;
-  text-decoration: none;
-}
-
-footer {
-  background-color: #333;
-  color: #fff;
-  padding: 10px 0;
-  text-align: center;
+  margin: 0px;
+  padding: 0px;
 }
 
 /* Specific Styles */
 .home-container {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 0px;
 }
 
 .car-listings-container {
-  margin-top: 20px;
+  margin-top: 0px;
 }
 
 .car-details-container {
-  margin-top: 20px;
+  margin-top: 0px;
 }
 
 .booking-container {
-  margin-top: 20px;
+  margin-top: 0px;
 }
