--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -7,32 +7,32 @@ footer{
     justify-content: center;
 }
 .footerContainer{
-    width: 100%;
-    padding: 70px 30px 20px;
+    width: auto;
+    padding: 70px 0px 20px;
 }
 .socialIcons{
     display: flex;
     justify-content: center;
 }
-.socialIcons a{
+.icon{
     text-decoration: none;
     padding: 10px;
     background-color: white;
     margin: 10px;
     border-radius: 50%;
 }
-.socialIcons a i{
+.icon i{
     font-size: 2em;
     color: black;
     opacity: 0.9;
 }
 
 /* Hover Effects on Social Media Icons */
-.socialIcons a:hover{
+.icon:hover{
     background-color: #111;
     transition: 0.5s;
 }
-.socialIcons a:hover i{
+.icon:hover i{
     color: white;
     transition: 0.5s;
 }
@@ -44,7 +44,7 @@ footer{
     justify-content: center;
     list-style-type: none;
 }
-.footerNav ul li a{
+.pages{
     color: white;
     margin: 20px;
     text-decoration: none;
@@ -52,7 +52,7 @@ footer{
     opacity: 0.7;
     transition: 0.5s;
 }
-.footerNav ul li a:hover{
+.pages:hover{
     opacity: 1;
 }
 .footerBottom{
@@ -70,3 +70,15 @@ footer{
     font-weight: 400;
     margin: 0px 5px;
 }
+
+@media (max-width: 700px){
+    .footerNav ul{
+        flex-direction: column;
+    }
+    .footerNav ul li{
+        width: 100%;
+        text-align: center;
+        margin: 10px;
+    }
+}
+
