--- a/src/components/AboutUs.css
+++ b/src/components/AboutUs.css
@@ -5,11 +5,11 @@
     font-family: "Arial",sans-serif;
 }
 .hero{
-    background-color: #f8f8f8;
+    background-color: #d5b1eb;
     overflow: hidden;
 }
 .heading h1{
-    color: #ff6347;
+    color: #2e0a83;
     font-size: 55px;
     text-align: center;
     margin-top: 35px;
@@ -18,25 +18,30 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 90%;
+    width: fit-content;
     margin: 65px auto;
 }
 .hero-content{
     flex: 1;
     width: 600px;
-    margin: 0px 25px;
+    margin: 0px 40px;
     animation: fadeInUp 2s ease;
 }
 .hero-content h2{
     font-size: 38px;
     margin-bottom: 20px;
-    color: #333;
+    color: #2e0a83;
 }
 .hero-content p{
     font-size: 24px;
     line-height: 1.5;
     margin-bottom: 40px;
-    color: #666;
+    color: #3e247c;
+}
+.hero-content p ul{
+    display: flex;
+    flex-direction: column;
+    list-style-type:square;
 }
 .hero-content button{
     display: inline-block;
