--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 footer{
-    background-color: #111;
+    background-color: #338;
     position:relative;
     bottom: 0;
     right: 0;
@@ -23,13 +23,13 @@ footer{
 }
 .icon i{
     font-size: 2em;
-    color: black;
+    color: rgb(14, 14, 95);
     opacity: 0.9;
 }
 
 /* Hover Effects on Social Media Icons */
 .icon:hover{
-    background-color: #111;
+    background-color: rgb(14, 14, 95);
     transition: 0.5s;
 }
 .icon:hover i{
@@ -49,14 +49,15 @@ footer{
     margin: 20px;
     text-decoration: none;
     font-size: 1.3em;
-    opacity: 0.7;
+    opacity: 0.9;
     transition: 0.5s;
 }
 .pages:hover{
     opacity: 1;
+    color: rgb(14, 14, 95);
 }
 .footerBottom{
-    background-color: #000;
+    background-color: rgb(6, 6, 59);
     padding: 20px;
     text-align: center;
 }
