--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -59,7 +59,7 @@
   }
   .nav-item-1:hover{
     font-weight:900;
-    padding: 5px 30px 0px 30px;
+    padding: 15px 30px 0px 30px;
     width: fit-content;
     justify-content: space-between;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -68,7 +68,7 @@
   }
   .nav-item-2{  
     color: #fff;
-    padding: 5px 30px 0px 30px;
+    padding: 15px 30px 0px 30px;
     text-decoration: none;
     font-weight:500;
     font-family: sans-serif; 
@@ -115,7 +115,9 @@
   }
   
   i{
-    color: #f9f001;
+    color: #d8ae53;
+    height: fit-content;
+    width: auto;
   }
   .sidebar{
     position: fixed;
