added home page

--- a/src/components/AboutUs.css
+++ b/src/components/AboutUs.css
@@ -5,7 +5,7 @@
     font-family: "Arial",sans-serif;
 }
 .hero{
-    background-color: #d5b1eb;
+    background-color:  #69c4e0;
     overflow: hidden;
 }
 .heading h1{
