--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -64,7 +64,7 @@ footer{
 .footerBottom p{
     color: white;
 }
-.desinger{
+.designer{
     opacity: 0.7;
     text-transform: uppercase;
     letter-spacing: 1px;
