--- a/src/components/Car.css
+++ b/src/components/Car.css
@@ -59,8 +59,11 @@
     border-radius: 5px;
     transition: background-color 0.3s;
   }
-  
-  .car .btn:hover {
+    button a{
+    color: #fff;
+    text-decoration: none;
+    }
+    .car .btn:hover {
     background-color: #ff6347;
   }
   
