--- a/src/components/ContactUs.css
+++ b/src/components/ContactUs.css
@@ -6,7 +6,7 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    background: linear-gradient(90deg,#0e3959 0%,#0e3959 30%, #18b7ff 30%, #18b7ff 100%);
+    background: linear-gradient(90deg,#0e3959 0%,#0e3959 30%, #03a9f5 30%, #03a9f5 100%);
 }
 .contactUs{
     position: relative;
@@ -56,10 +56,10 @@ body{
 }
 
 /* form */
+
  .formbox{
     position: relative;
     width: 100%;
-    animation: fadeInUp 2s ease;
  }
  .formbox .row50{
     display: flex;
@@ -112,7 +112,6 @@ body{
 
 .info{
     background: #0e3959;
-    animation: fadeInRight 2s ease;
 }
 .info h3{
     color: #fff;
@@ -161,7 +160,6 @@ body{
 .map{
     padding: 0px;
     margin: 0s;
-    animation: fadeInLeft 2s ease;
 }
 .map iframe{
     width: 100%;
@@ -205,40 +203,6 @@ body{
     }
 }
 
-.desinger{
-    opacity: 0.7;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: 400;
-    margin: 0px 5px;
-}
-@keyframes fadeInUp{
-    0%{
-        opacity: 0;
-        transform: translateY(50px);
-    }
-    100%{
-        opacity: 1;
-        transform: translateY(0px);
-    }
-}
-@keyframes fadeInRight{
-    0%{
-        opacity: 0;
-        transform: translateY(-50px);
-    }
-    100%{
-        opacity: 1;
-        transform: translateY(0px);
-    }
-}
-@keyframes fadeInLeft{
-    0%{
-        opacity: 0;
-        transform: translateY(50px);
-    }
-    100%{
-        opacity: 1;
-        transform: translateY(0px);
-    }
-}
+
+
+
