--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ li {
 /* Global Styles */
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: #fff;
 }
 
 .container {
