--- a/src/components/CarsList.css
+++ b/src/components/CarsList.css
@@ -1,16 +1,30 @@
 .cars-list {
     max-width: auto;
+    height:100%;
     margin: 0 auto;
     padding: 20px;
-    background-color: #69c4e0;
+    background-color: #ffcc00;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: static;
   }
-  
+  .list-details{
+   position: relative;
+   padding: auto;
+   top: 40px;
+  }
+  .data{
+    padding: 50px 20px;
+  }
   .cars-list h1 {
+    position: fixed;
+    z-index: 1;
+    background-color: #ffcc00;
+    top: 50px;
     text-align: center;
     margin-bottom: 20px;
+    width: 100%;
     height: auto;
     color: #2e0a83;
   }
@@ -19,6 +33,7 @@
     display: flex;
     width: calc(100% - 20px);
     margin-bottom: 30px;
+    position: static;
   }
   
   .car {
