--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,6 @@
 footer{
-    background-color: #338;
+    /* background-color: #9380ff; */
+    background-color:#735fe0;
     position:relative;
     bottom: 0;
     right: 0;
@@ -8,17 +9,17 @@ footer{
 }
 .footerContainer{
     width: auto;
-    padding: 70px 0px 20px;
+    padding: 50px 0px 10px;
 }
 .socialIcons{
     display: flex;
-    justify-content: center;
+    justify-content:center;
 }
 .icon{
     text-decoration: none;
     padding: 10px;
     background-color: white;
-    margin: 10px;
+    margin:25px;
     border-radius: 50%;
 }
 .icon i{
@@ -37,7 +38,7 @@ footer{
     transition: 0.5s;
 }
 .footerNav{
-    margin: 30px 0;
+    margin: 0px 0px 0px;
 }
 .footerNav ul{
     display: flex;
