--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,21 +1,25 @@
 /* Global Styles */
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
+
 
 /* Home Page Styles */
 .home {
   text-align: center;
   padding: 40px;
-  background-color: #69c4e0;
-}
+  background-color: #fff;
 
+}
+.content{
+  position: relative;
+  top: 55px; 
+}
 header {
   margin-bottom: 40px;
-  position: relative; /* Added position relative */
-  height: 500px; /* Initial height */
+  position: relative;/* Added position relative */
+  height: 600px; /* Initial height */
+}
+:root {
+  --bg-pos-x: 50%; /* Default horizontal position */
+  --bg-pos-y: 50%; /* Default vertical position */
 }
 
 .header-image {
@@ -24,19 +28,19 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-image: url('../images/home2.webp');
+  height: 600px;
+  background-image: url('../images/bg3.png');
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center bottom;
+  background-position:calc(var(--bg-pos-x) - 20px) calc(var(--bg-pos-y) - 30px);
   z-index: 0; /* Set the z-index to position behind the content */
-  opacity: 0.25;
+  opacity: 0.49;
 }
 
 header h1 {
   position: relative;
   font-size: 3em; /* Increase font size */
-  color: #EFECEC; /* Change text color to white */
+  color: #1e0d3f; /* Change text color to white */
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9); /* Add text shadow for better visibility */
   margin-bottom: 10px; /* Decrease margin bottom */
   z-index: 1; /* Bring the h1 element in front of the background image */
@@ -57,10 +61,11 @@ header h1 {
 
 .btn {
   display: inline-block;
-  background-color: #ff4500;
+  background-color: #5536f0;
   color: #fff;
   text-decoration: none;
   padding: 10px 20px;
+  border-color: #5536f0;
   border-radius: 5px;
   transition: background-color 0.3s, transform 0.5s ease-in-out;
   z-index: 1; /* Ensure the button is in front of the background image */
@@ -68,7 +73,8 @@ header h1 {
 
 
 .btn:hover {
-  background-color: #ff6347;
+  background-color: #4527da;
+  border-color: #4527da;
   transform: scale(1.1); /* Grow bigger on hover */
 }
 
@@ -80,6 +86,7 @@ header h1 {
 }
 
 .services {
+  margin-top: auto;
   margin-bottom: 40px;
   display: flex;
   flex-wrap: wrap;
@@ -88,19 +95,25 @@ header h1 {
 
 .services h2{
   flex: 0 0 100%;
+  color: #0a031a;
 }
 
 .service-card {
   flex: 0 0 30%;
-  margin: 0 15px;
+  margin: 30px 15px;
   padding: 20px;
-  background-color: #faf8f8;
+  background-color: #031d3f;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
   transition: transform 0.5s ease-in-out; /* Add transition for smooth animation */
 }
-
+.service-card h3{
+  color: #fff;
+}
+.service-card p{
+  color: #f5e44af1;
+}
 .service-icon {
   font-size: 3em;
   margin-bottom: 20px;
@@ -109,8 +122,11 @@ header h1 {
 .cta {
   margin-bottom: 40px;
 }
-
+.cta h2{
+  color: #0a031a;
+}
 .book{
+  margin-top: 20px;
   transform: scale(1.2);
 }
 /* Media queries for responsiveness */
@@ -119,13 +135,18 @@ header h1 {
     width: 100%;
     height: 400px;
   }
+  .header-image{
+    height: 400px;
+  }
 }
 
 @media screen and (max-width: 768px) {
   header {
     height: 300px;
   }
-
+  .header-image{
+    height: 300px;
+  }
   header h1 {
     font-size: 2em;
   }
@@ -147,7 +168,9 @@ header h1 {
   header {
     height: 200px;
   }
-
+  .header-image{
+    height: 200px;
+  }
   header h1 {
     font-size: 1.5em;
   }
