--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,152 +1,167 @@
 /* Navbar Styles */
 .navbar {
-  background-color: #338;
-  color: #fff;
-  position: static;
-  margin:0px;
-  padding: 0px; 
+  background-color: #ad9eff;
+  z-index: 2;
+  color: #111;
+  position: fixed;
+  margin: 0px;
+  padding: 0px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height:64px;
-  margin: 0px ;/* Set height to 100% */
-  padding: 0px;/* Adjust padding as needed */
-    /* Set Navbar width to 100% of its container */
+  height: 64px;
+  margin: 0px; /* Set height to 100% */
+  padding: 0px; /* Adjust padding as needed */
+  /* Set Navbar width to 100% of its container */
+  backdrop-filter: blur(10px); /* Add backdrop filter for blur effect */
 }
-  .navbar-brand {
-    color:#fff;
-    display:flex;
-  }
-  
-  ul{
-    margin-right: 20px;
-  }
-  ul li:first-child{
-    justify-content: start;
-   position: absolute;
-   left:15px;
-   top:2px;
-  }
-  ul li{
-    position:relative;
-    top:2px;
-    justify-content: end;
-  }
-  .logo{
-    width: 100px;
-    height: 50px;
-    padding: 0px;
-    animation: moveImage 1.5s infinite ease alternate; /* Animation name, duration, iteration count, direction */
-  }
- 
-  .navbar-nav {
-    display: flex;
-    flex-direction: row;
-    margin-left: auto;
-  }
-  .navbar-brand{
-    display: flex;
-    flex-direction:row-reverse ;
-    align-items: center;
-  }
-  .nav-item-1{
-    padding: 0px 30px 0px 30px;
-    text-decoration: none;
-    font-weight:500;
-    font-family: sans-serif; 
-    
-  }
-  .nav-item-1:hover{
-    font-weight:900;
-    padding: 15px 30px 0px 30px;
-    width: fit-content;
-    justify-content: space-between;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: #eee; 
-    background-color: rgb(84, 84, 204);
-  }
-  .nav-item-2{  
-    color: #fff;
-    padding: 15px 30px 0px 30px;
-    text-decoration: none;
-    font-weight:500;
-    font-family: sans-serif; 
-  }
-  .nav-item-2:hover{
-    font-weight:900;
-    padding: 0px 30px 0px 30px;
-    width: fit-content;
-    justify-content: space-between;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color:rgb(80, 80, 177);
-    background-color: rgb(84, 84, 204);
-  }
-  .nav-link {
-    color: #fff;
-    text-decoration: none;
-  }
-  .nav-link:hover{
-    color:rgb(41, 41, 109);
-  }
-  
-  .login-btn{
-    font-family: sans-serif; 
-    height: 35px;
-    width: 100%;
-    margin: 0px;
-    padding: 0 30px;
-    text-decoration: none;
-    font-weight: 600;
-    align-items: center;
-    border-radius: 8px;
-  }
-  .login-btn:hover{
-    background-color:rgb(39, 39, 100);
-    font-weight: 900;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
-  }
-  .login-link{
-    color:rgb(100, 100, 216);
-    text-decoration: none;
-  }
-  .login-link:hover{
-    color:#fff;
-    width: fit-content;
-  }
-  
-  i{
-    color: #d8ae53;
-    height: fit-content;
-    width: auto;
-  }
-  .sidebar{
-    position: fixed;
-    top: 0;
-    right: 0;
-    height: 50vh;
-    width: 250px;
-    z-index: 999;
-    color: yellow;
-    background-color: #111;
-    backdrop-filter: blur(10px);
-    box-shadow: -10px 0 10px rgba(0,0,0,0.1);
-    display: none;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
+
+.navbar-brand {
+  color: #fff;
+  display: flex;
 }
+
+ul {
+  margin-right: 20px;
+}
+
+.moving-car {
+  justify-content: start;
+  position: absolute;
+  left: 15px;
+  top: 0px;
+}
+.customer{
+  justify-content: start;
+  position: absolute;
+  left: 160px;
+  top: 0px;
+}
+ul li {
+  position: relative;
+  top: 0px;
+  justify-content: end;
+}
+
+.logo {
+  width: 100px;
+  height: 50px;
+  padding: 0px;
+  animation: moveImage 1.5s infinite ease alternate; /* Animation name, duration, iteration count, direction */
+}
+.sell{
+  width: 50px;
+  height: 55px;
+}
+.navbar-nav {
+  display: flex;
+  flex-direction: row;
+  margin-left: auto;
+}
+
+.navbar-brand {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+}
+
+.nav-item-1 {
+  padding: 0px 10px;
+  text-decoration: none;
+  font-weight: 500;
+  font-family: sans-serif;
+}
+
+.nav-item-1:hover {
+  font-weight: 800;
+  width: fit-content;
+  justify-content: space-between;
+  /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
+}
+
+.nav-item-2 {
+  padding: 0px 10px;
+  text-decoration: none;
+  font-weight: 500;
+  font-family: sans-serif;
+}
+
+.nav-item-2:hover {
+  font-weight: 800;
+  width: fit-content;
+  justify-content: space-between;
+  /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
+}
+
+.nav-link {
+  color: #111;
+  text-decoration: none;
+}
+
+
+
+.login-btn {
+  font-family: sans-serif;
+  height: 35px;
+  width: 100%;
+  margin: 0px;
+  padding: 0 30px;
+  text-decoration: none;
+  font-weight: 600;
+  align-items: center;
+  border-radius: 8px;
+}
+
+.login-btn:hover {
+  background-color: rgb(39, 39, 100);
+  font-weight: 900;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.login-link {
+  color: rgb(100, 100, 216);
+  text-decoration: none;
+}
+
+.login-link:hover {
+  color: #fff;
+  width: fit-content;
+}
+
+i {
+  color: #d8ae53;
+  height: fit-content;
+  width: auto;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 280px;
+  width: 250px;
+  z-index: 999;
+  background-color: #fff;
+  backdrop-filter: blur(10px);
+  box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
 .login-info {
   display: flex;
   flex-direction: column;
   margin: 0px;
-  padding: 0px; 
+  padding: 0px;
 }
 
-.login-info li:nth-child(3) button{
+.login-info li:nth-child(3) button {
   transform: translateX(20px);
   width: 80%;
-  font-family: sans-serif; 
+  font-family: sans-serif;
   height: 35px;
   margin: 0px;
   padding: 0 30px;
@@ -155,43 +170,86 @@
   align-items: center;
   border-radius: 8px;
 }
-.login-info li:nth-child(3) button:hover{
+
+.login-info li:nth-child(3) button:hover {
   width: 80%;
-  background-color:rgb(39, 39, 100);
+  background-color: rgb(39, 39, 100);
   font-weight: 900;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.menu-button{
-    display: none;
+.menu-button {
+  display: none;
 }
-ul{
+
+ul {
   width: 100%;
   list-style: none;
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
-  @keyframes moveImage {
-    0% {
-      transform: translateX(0px); /* Starting position */
-    }
-    100% {
-      transform: translateX(30px); /* Ending position */
-    }
+
+@keyframes moveImage {
+  0% {
+    transform: translateX(0px); /* Starting position */
   }
-  @media(max-width: 950px){
-    .hideOnMobile{
-        display: none;
-    }
-    .menu-button{
-        display: block;
-    }
+  100% {
+    transform: translateX(30px); /* Ending position */
+  }
 }
-@media(max-width: 400px){
-    .navbar{
-        width:auto;
-        height: 40px;
-    }
+
+@media (max-width: 950px) {
+  .hideOnMobile {
+    display: none;
+  }
+  .menu-button {
+    display: block;
+  }
 }
-  
+
+@media (max-width: 400px) {
+  .navbar {
+    width: auto;
+    height: 40px;
+  }
+}
+
+/* Add these styles at the end of the CSS file */
+.menu-button {
+  display: none;
+}
+
+.close-button {
+  display: none;
+  position: relative;
+  left: -100px;
+  top: 8px;
+}
+
+@media (max-width: 950px) {
+  .navbar-nav.sidebar {
+    display: none;
+    flex-direction: column;
+  }
+
+  .menu-button {
+    display: block;
+  }
+
+  .show-sidebar .sidebar {
+    display: flex;
+  }
+
+  .show-sidebar .menu-button {
+    display: none;
+  }
+
+  .menu-button.hidden {
+    display: none;
+  }
+
+  .close-button {
+    display: block;
+  }
+}
